added desktop size navbar

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <h3>Golden Academy</h3>
       </div>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Facilities</a></li>
-        <li><a href="">Admission</a></li>
+        <li><a class="orange" href="#">Home</a></li>
+        <li><a class="sky_blue" href="#">About</a></li>
+        <li><a class="aqua" href="#">Facilities</a></li>
+        <li><a class="purpol" href="#">Admission</a></li>
       </ul>
-      <aside><button>Contract</button></aside>
+      <aside><button class="nav_btn">Contract</button></aside>
     </nav>
   </header>
   <main>
