aadded quicksand-font and raleway-font

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
+<body class="quicksand-font">
 
-  <header>
+  <header class="">
     <nav>
       <div>
         <img src="./assets/logo.png" alt="">
@@ -27,6 +27,10 @@
     </nav>
   </header>
   <main>
+    <!-- banner section  -->
+    <section>
+
+    </section>
 
   </main>
   <footer>
