aadded hero section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" hero_contentcontent="width=device-width, initial-scale=1.0">
   <title>Golden Academy</title>
   <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="./styles/style.css">
@@ -11,7 +11,7 @@
 
 <body class="quicksand-font">
 
-  <header class="">
+  <header class="hide">
     <nav>
       <div>
         <img src="./assets/logo.png" alt="">
@@ -27,9 +27,19 @@
     </nav>
   </header>
   <main>
-    <!-- banner section  -->
-    <section>
-
+    <!-- banner hero section  -->
+    <section class="hero_section">
+      <div class="hero_content">
+        <h1>Empowering
+          students from small age towards vision</h1>
+        <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and
+          Dynamic
+          World.</p>
+        <button>Enroll Now</button>
+      </div>
+      <div class="hero_image">
+        <img src="./assets/hero-kids.png" alt="">
+      </div>
     </section>
 
   </main>
