added responsive hero section

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <!-- banner hero section  -->
     <section class="hero_section">
       <div class="hero_content">
-        <h1>Empowering
-          students from small age towards vision</h1>
+        <h1><span class="orange">Empowering</span><br>
+          students from small age <span class="sky_blue ">towards vision</span> </h1>
         <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and
           Dynamic
-          World.</p>
+          World.
+        </p>
         <button>Enroll Now</button>
       </div>
       <div class="hero_image">
