added unespect query problem

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <meta name="viewport" hero_contentcontent="width=device-width, initial-scale=1.0">
   <title>Golden Academy</title>
   <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="quicksand-font">
 
-  <header class="hide">
+  <header class="">
     <nav>
       <div>
         <img src="./assets/logo.png" alt="">
@@ -24,8 +28,13 @@
         <li><a class="purpol" href="#">Admission</a></li>
       </ul>
       <aside><button class="nav_btn">Contract</button></aside>
+      <div>
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </nav>
   </header>
+
+  <!--start main section  -->
   <main>
     <!-- banner hero section  -->
     <section class="hero_section">
@@ -34,12 +43,19 @@
           students from small age <span class="sky_blue ">towards vision</span> </h1>
         <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and
           Dynamic
-          World.
-        </p>
+          World.</p>
         <button>Enroll Now</button>
       </div>
       <div class="hero_image">
         <img src="./assets/hero-kids.png" alt="">
+      </div>
+    </section>
+
+    <!-- start Standard Curriculum -->
+    <section>
+      <h2 class="heading_h2">Standard Curriculum</h2>
+      <div>
+
       </div>
     </section>
 
