--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" hero_contentcontent="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Golden Academy</title>
   <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
 
@@ -15,11 +15,15 @@
 
 <body class="quicksand-font">
 
-  <header class="">
+  <header>
     <nav>
       <div>
         <img src="./assets/logo.png" alt="">
         <h3>Golden Academy</h3>
+      </div>
+
+      <div class="menubar">
+        <i class="fa-solid fa-bars"></i>
       </div>
       <ul>
         <li><a class="orange" href="#">Home</a></li>
@@ -28,14 +32,12 @@
         <li><a class="purpol" href="#">Admission</a></li>
       </ul>
       <aside><button class="nav_btn">Contract</button></aside>
-      <div>
-        <i class="fa-solid fa-bars"></i>
-      </div>
+
     </nav>
   </header>
 
   <!--start main section  -->
-  <main>
+  <main class="">
     <!-- banner hero section  -->
     <section class="hero_section">
       <div class="hero_content">
