added responsive Standard Curriculum section

--- a/index.html
+++ b/index.html
@@ -54,10 +54,39 @@
     </section>
 
     <!-- start Standard Curriculum -->
-    <section>
+    <section class="Standard_Curriculum">
       <h2 class="heading_h2">Standard Curriculum</h2>
-      <div>
-
+      <div class="card_container">
+        <div class="card" id="kinder">
+          <figure>
+            <img src="./assets/kinder.png" alt="">
+          </figure>
+          <h4>Kinder (3-6) Years</h4>
+          <p class="raleway-font ">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+          <button>Read More</button>
+        </div>
+        <div class="card" id="emargincy_color">
+          <figure>
+            <img src="./assets/elementary.png" alt="">
+          </figure>
+          <h4>Elementary School</h4>
+          <p class="raleway-font ">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+          <button>Read More</button>
+        </div>
+        <div class="card" id="middle_color">
+          <figure>
+            <img src="./assets/middle.png" alt="">
+          </figure>
+          <h4>Middle (10-16) Years</h4>
+          <p class="raleway-font ">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+          <button>Read More</button>
+        </div>
       </div>
     </section>
 
