final responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3>Golden Academy</h3>
       </div>
 
-      <div class="menubar">
+      <div class="hide">
         <i class="fa-solid fa-bars"></i>
       </div>
       <ul>
@@ -34,15 +34,16 @@
       <aside><button class="nav_btn">Contract</button></aside>
 
     </nav>
+    <hr class="hide">
   </header>
 
   <!--start main section  -->
-  <main class="">
+  <main>
     <!-- banner hero section  -->
     <section class="hero_section">
       <div class="hero_content">
         <h1><span class="orange">Empowering</span><br>
-          students from small age <span class="sky_blue ">towards vision</span> </h1>
+          students from small <br> age <span class="sky_blue ">towards vision</span> </h1>
         <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and
           Dynamic
           World.</p>
@@ -87,6 +88,10 @@
             mu sdis parturient</p>
           <button>Read More</button>
         </div>
+      </div>
+      <div class="arow_icon orange">
+        <i class="fa-solid fa-circle-arrow-left"></i>
+        <i class="fa-solid fa-circle-arrow-right"></i>
       </div>
     </section>
 
