added Our Stories section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="./assets/kinder.png" alt="">
           </figure>
           <h4>Kinder (3-6) Years</h4>
-          <p class="raleway-font ">Cum sociis natoque penatibus et magnis
+          <p class="raleway-font">Cum sociis natoque penatibus et magnis
             dis parturient montes, nascetur ridiculus
             mu sdis parturient</p>
           <button>Read More</button>
@@ -95,6 +95,64 @@
       </div>
     </section>
 
+    <!-- start Our Stories sectio  -->
+
+    <section class="our_stories">
+      <h2 class="heading_h2"> Our Stories</h2>
+      <div class="our_stories_card_container">
+        <div class="lift_card">
+          <figure><img src="./assets/story-1.png" alt=""></figure>
+          <figcaption>
+            <button class="left_absolute_btn raleway-font ">November 19, 2019</button>
+
+            <h4 class="lift_card_h4">A fun toddler coloring training on
+              classroom</h4>
+            <p class="raleway-font">Beautiful branding for changes by Never Now in Australia.
+              changes is a platform for open discussion in an inclusive and
+              collaborative environment, providing the...</p>
+          </figcaption>
+        </div>
+
+
+        <div class="right_grid">
+
+
+          <div class="grid_card">
+            <figure><img src="./assets/story-2.png" alt=""></figure>
+            <figcaption>
+              <button class="absolute_btn raleway-font ">November 19, 2019</button>
+              <p>Find out if a school fits the
+                family’s needs</p>
+            </figcaption>
+          </div>
+          <div class="grid_card">
+            <figure><img src="./assets/story-2.png" alt=""></figure>
+            <figcaption>
+              <button class="absolute_btn raleway-font ">November 19, 2019</button>
+              <p>Find out if a school fits the
+                family’s needs</p>
+            </figcaption>
+          </div>
+          <div class="grid_card">
+            <figure><img src="./assets/story-2.png" alt=""></figure>
+            <figcaption>
+              <button class="absolute_btn raleway-font ">November 19, 2019</button>
+              <p>Find out if a school fits the
+                family’s needs</p>
+            </figcaption>
+          </div>
+          <div class="grid_card">
+            <figure><img src="./assets/story-2.png" alt=""></figure>
+            <figcaption>
+              <button class="absolute_btn raleway-font">November 19, 2019</button>
+              <p>Find out if a school fits the
+                family’s needs</p>
+            </figcaption>
+          </div>
+
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
