added responsive our_stories section for mobile device

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </section>
 
-    <!-- start Our Stories sectio  -->
+    <!-- start Our Stories section  -->
 
     <section class="our_stories">
       <h2 class="heading_h2"> Our Stories</h2>
