--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </header>
 
   <!--start main section  -->
-  <main>
+  <main class="main_article">
     <!-- banner hero section  -->
     <section class="hero_section">
       <div class="hero_content">
@@ -152,9 +152,46 @@
 
         </div>
       </div>
+
+      <div class="vew_all_container">
+        <button class="vew_all_btn">Vew All</button>
+
+      </div>
     </section>
   </main>
+
+
   <footer>
+    <section class="foot_width">
+      <div class="foot_width_left">
+        <figure>
+          <img src="./assets/logo.png" alt="logo"><span>Kids <br>
+            Education</span>
+        </figure>
+        <figcaption>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple
+          Aussie.
+          Mayo rib sauce
+          Hawaiian meatball.</figcaption>
+      </div>
+      <div class="foot_width_meddle">
+        <h5>About School</h5>
+        <div>
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Facilities</a>
+          <a href="">Admission</a>
+        </div>
+      </div>
+      <div class="foot_width_right">
+        <h5>Keep In Touch</h5>
+        <div>
+          <img src="./assets/fb.png" alt="">
+          <img src="./assets/google+.png" alt="">
+          <img src="./assets/twitter.png" alt="">
+          <img src="./assets/dribble.png" alt="">
+        </div>
+      </div>
+    </section>
 
   </footer>
 </body>
